syntax = "proto3";

package calc;

message Calculator {
	int32 firstNumber = 1;
	int32 secondNumber = 2;
}

message CalculatorRequest {
	Calculator calculator = 1;
}

message CalculatorResponse{
	int32 result = 1;
}

service CalculatorService {
	rpc Calc (CalculatorRequest) returns (CalculatorResponse) {}
}